force-app/src/objects/PrivilegeEmailMessage__e.object
<CustomObject>
    <description>Event that triggers sending CIS Community invites and Privileges Update emails.</description>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>Contact ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProvisionedInAzureAD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provisioned in AzureAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>User ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Privilege Email Message</label>
    <pluralLabel>Privilege Email Messages</pluralLabel>
</CustomObject>